# toonverter

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  USAGE.md  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  toonverter.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  index.rst
docs/api/: analysis.rst  analysis_token_counter.rst  analyzer.rst  async_api.rst  async_io.rst  context_formatter.rst  context_helpers.rst  converter.rst  core.rst  decoder.rst  diff.rst  differ.rst  encoder.rst  facade.rst  formats.rst  hybrid_serializer.rst  image_tool.rst  integrations.rst  message.rst  multimodal.rst  optimization.rst  plugins.rst  rag.rst  rag_chunking_api.rst  schema.rst  schema_helpers.rst  streaming.rst  utils.rst
docs/development/: architecture.rst  changelog.rst  contributing.rst  testing.rst
docs/examples/: basic_usage.rst  cli_usage.rst  custom_adapters.rst  deduplication.rst  nested_structures.rst  schema_tools.rst  smart_compression.rst  structural_diff.rst  tabular_data.rst  token_analysis.rst  vision_optimization.rst
docs/guides/: configuration.rst  deduplication.rst  getting_started.rst  installation.rst  quick_start.rst  schema_tools.rst  streaming.rst  toon_format.rst
docs/guides/integrations/: dspy.rst  fastapi.rst  haystack.rst  instructor.rst  langchain.rst  llamaindex.rst  mcp.rst  pandas.rst  pydantic.rst  redis.rst  sqlalchemy.rst
examples/: 01_simple_encode_decode.py  02_tabular_data.py  03_nested_structures.py  04_token_analysis.py  05_format_conversion.py  06_langchain_rag.py  07_pydantic_models.py  08_custom_adapters.py  09_cli_automation.sh  10_performance_benchmarks.py  11_type_preservation.py  12_migrate_from_json.py  13_deduplication.py  14_schema_tools.py  15_vision_optimization.py  16_smart_compression.py  17_structural_diff.py  18_redis_integration.py  19_streaming_data.py  basic_usage.py  dspy_example.py  fastapi_example.py  haystack_example.py  instructor_example.py  llamaindex_example.py  mcp_claude_desktop_config.json  mcp_server_example.py  pandas_example.py  sqlalchemy_example.py
rust/: Cargo.toml
rust/benches/: toon_benchmark.rs
rust/coverage-rust/: tarpaulin-report.html
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_parser.rs
rust/src/: batch.rs  conversion.rs  encoder.rs  error.rs  ir.rs  lexer.rs  lib.rs  parser.rs  serde_toon.rs  tokens.rs
rust/src/batch/: core.rs  mod.rs  tests.rs
rust/src/lexer/: core.rs  mod.rs  tests.rs
rust/src/parser/: core.rs  mod.rs  tests.rs
rust/src/serde_toon/: mod.rs  ser.rs  tests.rs
rust/tests/: batch_tests.rs
src/toonverter/: __init__.py  __version__.py  _toonverter_core.pyi  async_api.py  streaming.py
src/toonverter/analysis/: __init__.py  analyzer.py  comparator.py  deduplication.py  diff.py  reporter.py  token_counter.py
src/toonverter/cli/: __init__.py  main.py
src/toonverter/core/: __init__.py  config.py  context_formatter.py  exceptions.py  interfaces.py  message.py  registry.py  spec.py  types.py
src/toonverter/decoders/: __init__.py  event_parser.py  lexer.py  stream_decoder.py  stream_lexer.py  toon_decoder.py
src/toonverter/diff/: models.py
src/toonverter/differ/: __init__.py  engine.py  formatter.py
src/toonverter/encoders/: __init__.py  array_encoder.py  indentation.py  key_folding.py  number_encoder.py  stream_encoder.py  string_encoder.py  toon_encoder.py
src/toonverter/formats/: __init__.py  base.py  csv_format.py  json_format.py  jsonl_format.py  toml_format.py  toon_format.py  xml_format.py  yaml_format.py
src/toonverter/integrations/: __init__.py  dspy.py  dspy_integration.py  fastapi.py  fastapi_integration.py  haystack.py  haystack_integration.py  instructor_integration.py  langchain.py  langchain_integration.py  llamaindex.py  llamaindex_integration.py  mcp_server.py  pandas_integration.py  pydantic.py  pydantic_integration.py  redis_integration.py  sqlalchemy.py  sqlalchemy_integration.py
src/toonverter/multimodal/: __init__.py  cost.py  hybrid_serializer.py  image_tool.py  processor.py  vendors.py
src/toonverter/optimization/: __init__.py  compressor.py  engine.py  policy.py
src/toonverter/plugins/: __init__.py  interface.py  loader.py
tests/: conftest.py  test_decode_toon.py
tests/functional/: test_all_integrations.py  test_integrations.py  test_integrations_complete.py
tests/integration/: __init__.py  test_cli_commands.py  test_cli_new_commands.py  test_cli_schema.py  test_compression_savings.py  test_dspy_integration.py  test_fastapi_integration.py  test_ffi_contract.py  test_haystack_integration.py  test_infinite_generators.py  test_instructor_integration.py  test_langchain_integration.py  test_llamaindex_integration.py  test_mcp_integration.py  test_pandas_integration.py  test_panic_safety.py  test_pydantic_integration.py  test_redis_integration.py  test_rust_advanced.py  test_sqlalchemy_integration.py  test_streaming.py
tests/performance/: test_benchmarks.py  test_memory_profiling.py  test_optimization_benchmarks.py  test_rust_batch_performance.py  test_streaming_memory.py
tests/unit/: test_analyzer.py  test_api.py  test_array_encoder.py  test_array_encoder_coverage.py  test_async_api.py  test_base_format.py  test_comparator.py  test_compression.py  test_context_formatter.py  test_context_helpers.py  test_core_types.py  test_csv_format.py  test_decoder.py  test_diff.py  test_hybrid_serializer.py  test_image_tool.py  test_indentation.py  test_json_format.py  test_jsonl_format.py  test_key_folding.py  test_message.py  test_multimodal.py  test_number_encoder.py  test_options_conversion.py  test_python_decoder_coverage.py  test_registry.py  test_reporter.py  test_schema.py  test_schema_helpers.py  test_spec.py  test_spec_compliance.py  test_stream_decoder.py  test_stream_encoder.py  test_streaming.py  test_string_encoder.py  test_string_quoting.py  test_toml_format.py  test_toon_decoder.py  test_toon_decoder_basic.py  test_toon_decoder_coverage_adv.py  (+6 more)
(+21 files in other folders)
