[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "toonverter"
version = "1.1.2"
description = "Token-Optimized Object Notation (TOON) converter for efficient LLM data serialization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Danesh Patel", email = "danesh_patel@outlook.com"}

]
maintainers = [
    {name = "Danesh Patel", email = "danesh_patel@outlook.com"}
]
keywords = [
    "llm",
    "token-optimization",
    "data-serialization",
    "toon",
    "json",
    "yaml",
    "toml",
    "csv",
    "xml",
    "langchain",
    "llamaindex",
    "haystack",
    "dspy",
    "instructor",
    "rag",
    "mcp",
    "machine-learning",
    "ai",
    "nlp",
    "prompt-optimization"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed"
]

dependencies = [
    "typing-extensions>=4.8.0",
    "tiktoken>=0.5.0",
    # Core format support (always included)
    "PyYAML>=6.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0",  # TOML writing support for all Python versions
    # CLI support (required for console script entry point)
    "click>=8.1.0",
]

[project.optional-dependencies]
# Analysis and Deduplication
analysis = [
    "scikit-learn>=1.0.0",
    "sentence-transformers>=2.2.2",
]

# CLI support
cli = [
    "rich>=13.0.0",
]
pandas = ["pandas>=2.0.0"]
pydantic = ["pydantic>=2.0.0"]
langchain = ["langchain>=0.1.0"]
fastapi = ["fastapi>=0.100.0", "pydantic>=2.0.0"]
sqlalchemy = ["sqlalchemy>=2.0.0"]
mcp = ["mcp>=0.9.0"]
llamaindex = ["llama-index>=0.10.0"]
haystack = ["haystack-ai>=2.0.0"]
dspy = ["dspy-ai>=2.4.0"]
instructor = ["instructor>=1.0.0", "pydantic>=2.0.0"]
redis = ["redis>=5.0.0"]

# Semantic chunking dependencies
chunker = [
    "networkx>=3.0",
    "python-louvain>=0.16",
    "sentence-transformers>=2.2.2",
]

# Grouped integrations - AI/ML frameworks
ai = [
    "llama-index>=0.10.0",
    "haystack-ai>=2.0.0",
    "dspy-ai>=2.4.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
]

# Grouped integrations - Data science
data = [
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
]

# Grouped integrations - Web frameworks
web = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
]

# Grouped integrations - LLM tools
llm = [
    "langchain>=0.1.0",
    "mcp>=0.9.0",
]

# Vision dependencies
vision = [
    "Pillow>=9.0.0",
    "numpy>=1.24.0",
]

# All integrations
integrations = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.0",
    "mcp>=0.9.0",
    "llama-index>=0.10.0",
    "haystack-ai>=2.0.0",
    "dspy-ai>=2.4.0",
    "instructor>=1.0.0",
    "redis>=5.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.80.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "bump2version>=1.0.1",
    "types-PyYAML>=6.0.0",
    "types-toml>=0.10.0",
]

# Documentation dependencies
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
]

# Performance benchmarking
benchmark = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
]

# All optional dependencies (including dev tools)
all = [
    "toonverter[integrations,cli,dev,docs,benchmark,analysis]",
]

[project.urls]
Homepage = "https://github.com/Be-Wagile-India/toonverter"
Documentation = "https://be-wagile-india.github.io/toonverter/"
Repository = "https://github.com/Be-Wagile-India/toonverter"
"Bug Tracker" = "https://github.com/Be-Wagile-India/toonverter/issues"
Changelog = "https://github.com/Be-Wagile-India/toonverter/blob/main/CHANGELOG.md"

[project.scripts]
toonverter = "toonverter.cli.main:cli"

[project.entry-points."toonverter.plugins"]
# Plugin entry points for third-party extensions

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["toonverter*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
toonverter = ["py.typed"]

# Ruff configuration - linting and formatting
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value in comparison
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "TRY003",  # long exception message
    "TRY300",  # try-except-else pattern (stylistic)
    "TRY301",  # abstract raise (stylistic preference)
    "SIM105",  # contextlib.suppress (readability with try-except-pass)
    "SIM102",  # nested if statements (readability preference)
    "RUF022",  # __all__ sorting (keep logical grouping with comments)
    "RUF034",  # useless if-else (false positives)
    "B027",    # empty methods in abstract base (intentional hooks)
    "B904",    # raise from (lower priority for now)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # magic values in tests
    "S101",     # assert usage
    "ARG",      # unused arguments in fixtures
    "PLC0415",  # imports not at top (test-specific imports)
    "PT018",    # composite assertions (readability in tests)
    "E741",     # ambiguous variable names (short names in comprehensions)
    "PTH",      # use pathlib (tests use standard open for simplicity)
    "N802",     # function name conventions (test method names)
    "N806",     # variable name conventions (SQLAlchemy Session)
]
"src/toonverter/optimization/deduplicator.py" = [
    "TC003",    # Callable is used at runtime, cannot be in TYPE_CHECKING block
    "TC001",    # ToonEncodeOptions is used at runtime as a default argument, cannot be in TYPE_CHECKING block
]
"__init__.py" = [
    "F401",     # unused imports (re-exports)
    "ARG",      # unused arguments in API (kept for future compatibility)
    "PLC0415",  # imports at top (lazy loading)
]
"src/toonverter/cli/*.py" = [
    "PLC0415",  # lazy imports in CLI (intentional for performance)
    "ARG001",   # unused arguments (CLI signatures)
]
"tests/unit/test_toml_format.py" = [
    "F401",     # unused imports (checking availability)
]
"tests/integration/test_pydantic_integration.py" = [
    "PT011",    # broad exceptions in test (intentional)
    "B017",     # broad assert exceptions (intentional)
]
"src/toonverter/integrations/*.py" = [
    "PLC0415",  # imports in functions (lazy loading for optional deps)
    "F401",     # unused imports (checking availability)
    "ARG002",   # unused options arguments (API compatibility)
    "PLE0605",  # __all__ format (dynamic construction)
]
"src/toonverter/formats/__init__.py" = [
    "PLC0415",  # import in function (intentional for registry)
]
"src/toonverter/formats/toml_format.py" = [
    "ARG002",   # unused options (API compatibility)
]
"src/toonverter/integrations/haystack_integration.py" = [
    "ARG001",   # unused include_embeddings (future use)
]
"src/toonverter/integrations/instructor_integration.py" = [
    "PLW2901",  # loop variable override (intentional unpacking)
]
"src/toonverter/integrations/mcp_server.py" = [
    "E722",     # bare except for JSON parsing (intentional fallback)
]
"examples/*.py" = [
    "T201",     # prints allowed in examples
    "I001",     # import sorting (less strict in examples)
    "F401",     # unused imports (examples)
    "PLC0415",  # top-level imports
    "Q000",     # quotes
    "F541",     # f-strings
    "E402",     # imports at top
]

[tool.ruff.lint.isort]
known-first-party = ["toonverter"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.10"
# Relax strict mode for v1.0.0 - will improve in future versions
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Still enforce these important checks
warn_unused_ignores = false  # Too many false positives with optional deps
disallow_any_generics = false  # Too strict for integrations
disallow_subclassing_any = false
disallow_untyped_calls = false  # Too strict for third-party libs
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "tiktoken.*",
    "yaml.*",
    "toml.*",
    "tomli.*",
    "tomli_w.*",
    "pandas.*",
    "pydantic.*",
    "langchain.*",
    "fastapi.*",
    "sqlalchemy.*",
    "mcp.*",
    "llama_index.*",
    "haystack.*",
    "dspy.*",
    "instructor.*",
    "hypothesis.*",
    "click.*",
    "sklearn.*",
    "sentence_transformers.*",
    "defusedxml.*",
    "ijson.*",
    "numpy.*",
    "PIL.*",
]
ignore_missing_imports = true

# Relax strict rules for integrations (third-party lib compatibility)
[[tool.mypy.overrides]]
module = "toonverter.integrations.*"
disallow_untyped_calls = false
disallow_untyped_defs = false
warn_return_any = false
disallow_any_generics = false
check_untyped_defs = false

# CLI has click decorators that confuse mypy
[[tool.mypy.overrides]]
module = "toonverter.cli.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
# Click decorators cause false positives
disable_error_code = ["misc", "no-redef"]

# Formats may have optional dependencies
[[tool.mypy.overrides]]
module = "toonverter.formats.*"
disallow_untyped_calls = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=toonverter",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
    "-ra",
    "-vv",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "benchmark: Performance benchmarks",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["toonverter"]
parallel = true
concurrency = ["multiprocessing", "thread"]
sigterm = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/integrations/*",
    "*/plugins/loader.py",
]

[tool.coverage.paths]
source = [
    "src/toonverter",
    "*/site-packages/toonverter",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Bump2version configuration
[tool.bumpversion]
current_version = "1.1.2"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/toonverter/__version__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"

[tool.maturin]
python-source = "src"
module-name = "toonverter._toonverter_core"
manifest-path = "rust/Cargo.toml"

