[package]
name = "toonverter-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_toonverter_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["macros"] }
rayon = "1.8"
indexmap = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
memmap2 = "0.9"

[dev-dependencies]
once_cell = "1.18.0"
tempfile = "3.8"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[profile.release]
strip = true
lto = true
codegen-units = 1
